--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@vue/cli-plugin-router": "~5.0.0"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.11.3",
     "vue-router": "^4.3.0"
   }
 }
