--- a/node/package.json
+++ b/node/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "install": "^0.13.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.6",
     "npm": "^10.5.2",
     "vuex": "^4.0.2"
